--- a/results.html
+++ b/results.html
@@ -28,7 +28,7 @@
           </div>
           <div class="back-card" id="top">
             <img src = 'images/bg-card-back.png' alt="Back of a credit card image" width="285" height="165"> 
-            <div class="CVC-code"><p>000</p></div> <!--zmien class na id zrob classe wspolna dla rzeczy ktore razem sie zmieniaja--> 
+            <div class="CVC-code"><p></p></div> <!--zmien class na id zrob classe wspolna dla rzeczy ktore razem sie zmieniaja--> 
           </div>
           <div class="front-card" id="bottom">
             <img src = 'images/bg-card-front.png' alt="Front of a credit card image" width="285" height="165">
