--- a/index.html
+++ b/index.html
@@ -28,30 +28,30 @@
       </div>
       <div class="back-card" id="top">
         <img src = 'images/bg-card-back.png' alt="Back of a credit card image" width="285" height="165"> 
-        <div class="CVC-code"><p>000</p></div> <!--zmien class na id zrob classe wspolna dla rzeczy ktore razem sie zmieniaja--> 
+        <div class="CVC-code"><p  id="backcard">000</p></div> <!--zmien class na id zrob classe wspolna dla rzeczy ktore razem sie zmieniaja--> 
       </div>
       <div class="front-card" id="bottom">
         <img src = 'images/bg-card-front.png' alt="Front of a credit card image" width="285" height="165">
         <div class="card-logo"><svg fill="none" xmlns="http://www.w3.org/2000/svg"><ellipse cx="23.478" cy="23.5" rx="23.478" ry="23.5" fill="#fff"/><path d="M83.5 23.5c0 5.565-4.507 10.075-10.065 10.075-5.559 0-10.065-4.51-10.065-10.075 0-5.565 4.506-10.075 10.065-10.075 5.558 0 10.065 4.51 10.065 10.075Z" stroke="#fff"/></svg></div>
-        <div class="card-number"><p>0000 0000 0000 0000</p></div>
-        <div class="name"><p>JANE APPLESSED</p></div>
-        <div class="expiration-date"><p>00/00</p></div>
+        <div class="card-number"><p id="cardnumbers">0000 0000 0000 0000</p></div>
+        <div class="name"><p id="cardname">JANE APPLESSED</p></div>
+        <div class="expiration-date"><span id="month">00</span><span>/</span><span id="year">00</span></div>
       </div>
     </section>
     <form action="results.html" method="GET" class="User-input" >
       <div class="top-Input">
         <label for="Cardholder-Name">Cardholder Name</label><br>
-        <input type="text" name="Cardholder-Name" placeholder="e.g. Jane Applessed" pattern="^[A-Z]{1}[a-z]{2,15}\s[A-Z]{1}[a-z]{2,16}$" required >  <br> 
+        <input type="text" id="name" oninput="change0()" name="Cardholder-Name" placeholder="e.g. Jane Applessed" pattern="^[A-Z]{1}[a-z]{2,15}\s[A-Z]{1}[a-z]{2,16}$" required >  <br> 
         <label for="Card-Number">Card Number</label><br>
-        <input type="text" name="Card-Number" placeholder="e.g. 1234 5678 9123 0000" pattern="^[0-9]{4}\s[0-9]{4}\s[0-9]{4}\s[0-9]{4}$" required minlength="19" maxlength="19"> <br>
+        <input type="text" id="numbers" oninput="change1()" name="Card-Number" placeholder="e.g. 1234 5678 9123 0000" pattern="^[0-9]{4}\s[0-9]{4}\s[0-9]{4}\s[0-9]{4}$" required minlength="19" maxlength="19"> <br>
       </div> 
       <label for="MM">Exp. Date</label>
       <label for="YY" class="label-YY"> (MM/YY)</label>
       <label for="CVC" class="label-CVC">CVC</label><br>
       <div class="date-cvc-flex">
-        <input type="text" name="MM" placeholder="MM" class="flex-items" pattern="^[0]{1}[1-9]{1}||[1]{1}[0-2]{1}$" required minlength="2" maxlength="2"> 
-        <input type="text" name="YY" placeholder="YY" class="flex-items" pattern="^[0-9]{2}$" required minlength="2" maxlength="2">
-        <input type="text" name="CVC" placeholder="e.g. 123" class="flex-items" pattern="^[0-9]{3}$" id="cvc" required minlength="3" maxlength="3" > <br>
+        <input type="text" name="MM" placeholder="MM" id="mm" class="flex-items" oninput="change2()" pattern="^[0]{1}[1-9]{1}||[1]{1}[0-2]{1}$" required minlength="2" maxlength="2"> 
+        <input type="text" name="YY" placeholder="YY" id="yy" class="flex-items" oninput="change3()" pattern="^[0-9]{2}$" required minlength="2" maxlength="2">
+        <input type="text" name="CVC"  id="cvc" class="flex-items" oninput="change4()" placeholder="e.g. 123" required minlength="3" maxlength="3" pattern="^[0-9]{3}$" > <br>
       </div>
       <button type="submit">Confirm</button>
     </form>
