--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
       <button type="submit" onclick="verify()">Confirm</button> <!---type="submit"-->
     </form>
   </main>
-  <script src="script.js"></script>
+  <script src="script.js"  type="text/JavaScript" defer></script>
 </body>
 </html>
