--- a/results.html
+++ b/results.html
@@ -45,6 +45,6 @@
         <button type="button" class="buttonstandard">Continue</button>
         </header>
     </main>
-    <script src="script.js"></script>
+    <script src="script.js"  type="text/JavaScript" defer></script>
 </body>
 </html>
